Minor tweaks; added disqus for comments; will add Facebook comments instead.

--- a/views/archive_intro.haml
+++ b/views/archive_intro.haml
@@ -1,4 +1,2 @@
 %h2
-  Here you'll find all articles I've written so far.
-  %br
-  Enjoy!
+  Here you'll find all the articles I've written so far. Enjoy!
