--- a/views/index_intro.haml
+++ b/views/index_intro.haml
@@ -1,4 +1,4 @@
 %h2
-  Here I write about things I stumple upon
+  Writing on <em>purpose</em>.
   %br
-  when doing my job, crafting web applications.
+
