--- a/views/_comments.haml
+++ b/views/_comments.haml
@@ -1,15 +1,15 @@
 %section#comments
 
   #twitter
-    %a{href: "http://twitter.com/share", class: "twitter-share-button", data: { count: "vertical", via: "iain_nl", text: article.title, url: "#{request.scheme}://#{request.host}#{article.url}"}} Tweet
+    %a{href: "http://twitter.com/share", class: "twitter-share-button", data: { count: "vertical", via: "doubleotoo", text: article.title, url: "#{request.scheme}://#{request.host}#{article.url}"}} Tweet
     %script(type="text/javascript" src="http://platform.twitter.com/widgets.js")
 
   #disqus_thread
 
   :javascript
-    var disqus_shortname  = 'iain';
+    var disqus_shortname  = 'justintoo';
     var disqus_identifier = '#{article.disqus_id}';
-    var disqus_url        = 'http://iain.nl#{article.url}';
+    var disqus_url        = 'http://justintoo.com#{article.url}';
 
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
