--- a/views/_read_more.haml
+++ b/views/_read_more.haml
@@ -1,2 +1,3 @@
 %p.read_more
-  %a{href: article.url, rel: 'nofollow'} → read more
+  %a{href: article.url, title: "Article: #{article.title}", rel: 'nofollow'} → read more
+
