--- a/views/_summary.haml
+++ b/views/_summary.haml
@@ -1,2 +1,8 @@
-%p.summary
-  %a{href: article.url, rel: 'nofollow'}= article.summary
+.article_summary
+
+  %p.summary
+
+    %a{href: article.url, title: "Article: #{article.title}", rel: 'nofollow'}
+      %img(src="#{article.image}")
+      = article.summary
+
