--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -39,7 +39,7 @@ body
   background-color: $background-color
   background-image: url("/gradient_squares.png")
   font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, sans-serif
-  font-size: 13px
+  font-size: 15px
 
 h1
   font-size: 25px
@@ -199,7 +199,7 @@ hr
     margin-top: $big_gap
 
   h1, h2, h3, h4, h5, h6
-    margin: $big-gap 0 $small-gap 0
+    margin: ($big-gap * 2) 0 $small-gap 0
     padding: 0 0 $small-gap 0
     border-bottom: $sidebar-border
 
@@ -250,10 +250,10 @@ hr
   .article_summary
     margin-bottom: 80px
     img
-      width:  100px
-      height: 100px
+      //width:  100px
+      //height: 100px
       float:  left
-      margin-right: 20px
+      margin-right: 50px
 
   aside
     +embossed
