--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,8 +9,14 @@
     %link(rel='shortcut icon' href='/favicon.png')
     %link(href='/feed' type='application/rss+xml' rel='alternate' title='RSS Feed')
     %script(type="text/javascript" src="/javascript/jquery.min.js")
+
+    %script(type="text/javascript") var switchTo5x=true
+    %script(type="text/javascript" src="http://w.sharethis.com/button/buttons.js")
+    %script(type="text/javascript") stLight.options({publisher: "b3c5a321-4d58-4aa9-a287-8cb616c1c284"});
+
     /[if lt IE 9]
       %script(src='http://html5shiv.googlecode.com/svn/trunk/html5.js')
+
   %body
     #fb-root
     :javascript
