--- a/views/stylesheet.sass
+++ b/views/stylesheet.sass
@@ -366,18 +366,16 @@ hr
   color: #96cbfe
 
 
-#twitter
-  margin-top: -1px
-  margin-left: -110px
-  float: left
-  width: 60px
-  border-top: $sidebar-border
-  padding: 2 * $small-gap 13px
+#share
+  border-bottom: $sidebar-border
+  margin-bottom: $big-gap
 
 #comments
-  margin: $big-gap ($big-gap * -1) 0 ($big-gap * -1) + 1
+  margin: ($big-gap * 2) ($big-gap * -1) 0 ($big-gap * -1) + 1
   padding: 0 $big-gap 0 $big-gap
   border-top: $sidebar-border
+  .fb-comments
+    margin-top: $big-gap
 
 code, pre, .ir_black
   +code-font
